--- a/ml-for-sec-lab3.ipynb
+++ b/ml-for-sec-lab3.ipynb
@@ -22,7 +22,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7-r7V9EY2O5Y",
-        "outputId": "32b5cb75-d240-4501-9f82-5791fe1bae26"
+        "outputId": "15528b45-5fb6-4251-a2d7-7984849e6ae8"
       },
       "outputs": [
         {
@@ -46,13 +46,13 @@
             "Requirement already satisfied: scipy in /usr/local/lib/python3.8/dist-packages (1.7.3)\n",
             "Requirement already satisfied: tqdm in /usr/local/lib/python3.8/dist-packages (4.64.1)\n",
             "Requirement already satisfied: Wand in /usr/local/lib/python3.8/dist-packages (0.6.11)\n",
-            "Requirement already satisfied: numpy>=1.17.3 in /usr/local/lib/python3.8/dist-packages (from opencv-python-headless==4.6.*) (1.21.6)\n",
+            "Requirement already satisfied: numpy>=1.14.5 in /usr/local/lib/python3.8/dist-packages (from opencv-python-headless==4.6.*) (1.21.6)\n",
             "Requirement already satisfied: imageio>=2.3.0 in /usr/local/lib/python3.8/dist-packages (from scikit-image==0.16.2) (2.9.0)\n",
-            "Requirement already satisfied: PyWavelets>=0.4.0 in /usr/local/lib/python3.8/dist-packages (from scikit-image==0.16.2) (1.4.1)\n",
-            "Requirement already satisfied: matplotlib!=3.0.0,>=2.0.0 in /usr/local/lib/python3.8/dist-packages (from scikit-image==0.16.2) (3.2.2)\n",
             "Requirement already satisfied: networkx>=2.0 in /usr/local/lib/python3.8/dist-packages (from scikit-image==0.16.2) (2.8.8)\n",
-            "Requirement already satisfied: pytz>=2017.3 in /usr/local/lib/python3.8/dist-packages (from pandas) (2022.7)\n",
+            "Requirement already satisfied: matplotlib!=3.0.0,>=2.0.0 in /usr/local/lib/python3.8/dist-packages (from scikit-image==0.16.2) (3.2.2)\n",
+            "Requirement already satisfied: PyWavelets>=0.4.0 in /usr/local/lib/python3.8/dist-packages (from scikit-image==0.16.2) (1.4.1)\n",
             "Requirement already satisfied: python-dateutil>=2.7.3 in /usr/local/lib/python3.8/dist-packages (from pandas) (2.8.2)\n",
+            "Requirement already satisfied: pytz>=2017.3 in /usr/local/lib/python3.8/dist-packages (from pandas) (2022.7)\n",
             "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.8/dist-packages (from matplotlib!=3.0.0,>=2.0.0->scikit-image==0.16.2) (3.0.9)\n",
             "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.8/dist-packages (from matplotlib!=3.0.0,>=2.0.0->scikit-image==0.16.2) (0.11.0)\n",
             "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.8/dist-packages (from matplotlib!=3.0.0,>=2.0.0->scikit-image==0.16.2) (1.4.4)\n",
@@ -83,7 +83,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LXn-H8ij3J3T",
-        "outputId": "d4d20d91-9f69-4a9e-f864-a1c633f4fbd8"
+        "outputId": "bb073410-bd3c-4c4a-a6c7-cba483528f95"
       },
       "execution_count": 2,
       "outputs": [
@@ -99,7 +99,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# INIT IMPORT\n",
         "import io\n",
         "import os\n",
         "import sys\n",
@@ -107,12 +106,13 @@
         "import numpy as np\n",
         "import tensorflow as tf\n",
         "import pandas as pd\n",
+        "import warnings\n",
         "\n",
         "from glob import glob\n",
         "from PIL import Image\n",
         "from skimage.util import view_as_windows\n",
-        "from networks import custom_two_terms_loss_wrapper, custom_softmax_activation, custom_mse_wrapper\n",
-        "from utils import max_min_coefficient, label2coefficient, string2Q"
+        "\n",
+        "warnings.filterwarnings(\"ignore\")"
       ],
       "metadata": {
         "id": "MtjpJolj339m"
@@ -124,17 +124,37 @@
       "cell_type": "code",
       "source": [
         "# GET PATH\n",
-        "sys.path.insert(1, \"BoostingCNN-Jpeg-Primary-Quantization-Matrix-Estimation\")\n",
-        "\n",
-        "# INIT PARAMS\n",
+        "sys.path.insert(1, \"BoostingCNN-Jpeg-Primary-Quantization-Matrix-Estimation\")"
+      ],
+      "metadata": {
+        "id": "HcdR36yTR86v"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from networks import custom_two_terms_loss_wrapper, custom_softmax_activation, custom_mse_wrapper\n",
+        "from utils import max_min_coefficient, label2coefficient, string2Q"
+      ],
+      "metadata": {
+        "id": "AKWF2dcgR97P"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "model_path = \"BoostingCNN-Jpeg-Primary-Quantization-Matrix-Estimation/models/\"\n",
         "data_path = \"BoostingCNN-Jpeg-Primary-Quantization-Matrix-Estimation/resources/\"\n",
         "img_path = \"test_images/\"\n",
         "model_file = model_path + 'model_QF1_60-98_QF2_90-2-term-loss.h5'\n",
-        "img_file =  data_path + '00000000_redaf7d93t.TIF_85_90.png'\n",
+        "img_file = data_path + '00000000_redaf7d93t.TIF_85_90.png'\n",
         "\n",
-        "# Load the table linking each pair of JPEG quality factors to the corresponding Q's coefficients\n",
-        "qf_map = np.load( data_path + 'qf1_qf2_map_90.npy', allow_pickle=True)\n",
+        "# Загрузим таблицу, связывающую каждую пару факторов качества JPEG с соответствующими коэффициентами Q\n",
+        "qf_map = np.load(data_path + 'qf1_qf2_map_90.npy', allow_pickle=True)\n",
         "\n",
         "examples = [\n",
         "    (77,),\n",
@@ -185,7 +205,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Расчёт weighted MSE\n",
+        "# Расчёт weighted MSE (Пункт А3)\n",
         "def mse_weighted(predictions, k_dct, weights):\n",
         "  diff = np.asarray((predictions - k_dct)**2)\n",
         "  mult = diff*weights\n",
@@ -265,7 +285,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Max value for coefficients\n",
+        "# Максимальное значение для коэффициентов\n",
         "max_coeffs, _ = max_min_coefficient(quality_range=(50, 100),\n",
         "                                    n_coeffs=15,\n",
         "                                    zig_zag_order=True)\n",
@@ -279,7 +299,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iEenNE6gNG_0",
-        "outputId": "b3731a49-56ce-4423-94c7-ad51ddf60561"
+        "outputId": "34bbb812-7433-450c-cd75-5c08247107a1"
       },
       "execution_count": 14,
       "outputs": [
@@ -318,7 +338,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "r5GvT50bAn2x",
-        "outputId": "505fcaa7-3fc1-495b-f416-e081ad6abad2"
+        "outputId": "ebff46c9-8eb6-45d8-c077-6889b47b1313"
       },
       "execution_count": 16,
       "outputs": [
@@ -326,7 +346,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1/1 [==============================] - 2s 2s/step\n",
+            "1/1 [==============================] - 1s 951ms/step\n",
             "[ 7  5  4  6  4  3  7  6  4  6  8  7  7  8 11]\n"
           ]
         }
@@ -344,26 +364,13 @@
         "    tmp = tmp[:64,:64]\n",
         "    tmp = preprocess_input(tmp, (64, 64), 255.)\n",
         "    pred, pred_w = predict(tmp, k_dct, max_coeffs)\n",
-        "    anls_data.append([e[0], pred[0], np.abs(pred[0]-e[0]), pred_w[0], np.abs(pred_w[0]-e[0])])\n",
-        "print('Complete!')"
+        "    anls_data.append([e[0], pred[0], np.abs(pred[0]-e[0]), pred_w[0], np.abs(pred_w[0]-e[0])])"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "MtvkS2fmGglU",
-        "outputId": "7cc0d00b-c621-431f-cb48-a73205f7c0ad"
+        "id": "MtvkS2fmGglU"
       },
       "execution_count": 17,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Complete!\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -389,7 +396,7 @@
           "height": 237
         },
         "id": "1dITc-A_a6P5",
-        "outputId": "f81485e6-cc1f-4bda-f089-013f602df68f"
+        "outputId": "aa319dca-2f59-4f4f-c643-6842d94878ba"
       },
       "execution_count": 19,
       "outputs": [
@@ -407,7 +414,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-1e9ac525-a344-46a9-abe2-52b396c9a932\">\n",
+              "  <div id=\"df-7fc29bba-eedc-4eaa-894d-96b057f43b58\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -479,7 +486,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1e9ac525-a344-46a9-abe2-52b396c9a932')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7fc29bba-eedc-4eaa-894d-96b057f43b58')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -530,12 +537,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-1e9ac525-a344-46a9-abe2-52b396c9a932 button.colab-df-convert');\n",
+              "          document.querySelector('#df-7fc29bba-eedc-4eaa-894d-96b057f43b58 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-1e9ac525-a344-46a9-abe2-52b396c9a932');\n",
+              "          const element = document.querySelector('#df-7fc29bba-eedc-4eaa-894d-96b057f43b58');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
