--- a/ml-for-sec-lab3.ipynb
+++ b/ml-for-sec-lab3.ipynb
@@ -22,7 +22,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7-r7V9EY2O5Y",
-        "outputId": "578e8cee-2a73-4d76-c4dd-65b0966e9ac5"
+        "outputId": "fa7cf8de-98f9-4f42-ccb2-a3bce1fe45a1"
       },
       "outputs": [
         {
@@ -46,16 +46,16 @@
             "Requirement already satisfied: scipy in /usr/local/lib/python3.8/dist-packages (1.7.3)\n",
             "Requirement already satisfied: tqdm in /usr/local/lib/python3.8/dist-packages (4.64.1)\n",
             "Requirement already satisfied: Wand in /usr/local/lib/python3.8/dist-packages (0.6.11)\n",
-            "Requirement already satisfied: numpy>=1.17.3 in /usr/local/lib/python3.8/dist-packages (from opencv-python-headless==4.6.*) (1.21.6)\n",
+            "Requirement already satisfied: numpy>=1.14.5 in /usr/local/lib/python3.8/dist-packages (from opencv-python-headless==4.6.*) (1.21.6)\n",
             "Requirement already satisfied: matplotlib!=3.0.0,>=2.0.0 in /usr/local/lib/python3.8/dist-packages (from scikit-image==0.16.2) (3.2.2)\n",
             "Requirement already satisfied: imageio>=2.3.0 in /usr/local/lib/python3.8/dist-packages (from scikit-image==0.16.2) (2.9.0)\n",
-            "Requirement already satisfied: PyWavelets>=0.4.0 in /usr/local/lib/python3.8/dist-packages (from scikit-image==0.16.2) (1.4.1)\n",
             "Requirement already satisfied: networkx>=2.0 in /usr/local/lib/python3.8/dist-packages (from scikit-image==0.16.2) (2.8.8)\n",
+            "Requirement already satisfied: PyWavelets>=0.4.0 in /usr/local/lib/python3.8/dist-packages (from scikit-image==0.16.2) (1.4.1)\n",
             "Requirement already satisfied: python-dateutil>=2.7.3 in /usr/local/lib/python3.8/dist-packages (from pandas) (2.8.2)\n",
             "Requirement already satisfied: pytz>=2017.3 in /usr/local/lib/python3.8/dist-packages (from pandas) (2022.7)\n",
+            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.8/dist-packages (from matplotlib!=3.0.0,>=2.0.0->scikit-image==0.16.2) (3.0.9)\n",
             "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.8/dist-packages (from matplotlib!=3.0.0,>=2.0.0->scikit-image==0.16.2) (0.11.0)\n",
             "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.8/dist-packages (from matplotlib!=3.0.0,>=2.0.0->scikit-image==0.16.2) (1.4.4)\n",
-            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.8/dist-packages (from matplotlib!=3.0.0,>=2.0.0->scikit-image==0.16.2) (3.0.9)\n",
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.8/dist-packages (from python-dateutil>=2.7.3->pandas) (1.15.0)\n"
           ]
         }
@@ -83,7 +83,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LXn-H8ij3J3T",
-        "outputId": "498ad5e5-8582-4cbd-ff92-2644174a4202"
+        "outputId": "3f0eb5bf-ceb3-4df1-9cc7-090d54bde9c0"
       },
       "execution_count": 2,
       "outputs": [
@@ -154,20 +154,38 @@
         "img_file = data_path + '00000000_redaf7d93t.TIF_85_90.png'\n",
         "\n",
         "# Загрузим таблицу, связывающую каждую пару факторов качества JPEG с соответствующими коэффициентами Q\n",
-        "qf_map = np.load(data_path + 'qf1_qf2_map_90.npy', allow_pickle=True)\n",
-        "\n",
-        "examples = [\n",
-        "    (77,),\n",
-        "    (70,90),\n",
-        "    (60,90),\n",
-        "    (98,90),\n",
-        "    (89,90),\n",
-        "]"
+        "qf_map = np.load(data_path + 'qf1_qf2_map_90.npy', allow_pickle=True)"
       ],
       "metadata": {
         "id": "8VJMAeiU37w_"
       },
       "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Набор пар коэффициентов качества JPEG (QF1, QF2). Коэффициент качества первого сжатия JPEG варьируется в заданном диапазоне (например, QF1 = [60, 70, 80, 90]), в то время как коэффициент качества второго сжатия JPEG является фиксированным (например, QF2 = 90)."
+      ],
+      "metadata": {
+        "id": "d24jryl1Ycjy"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "examples = [\n",
+        "    (60,90),\n",
+        "    (70,90),\n",
+        "    (80,90),\n",
+        "    (90,90),\n",
+        "    (98,90)\n",
+        "]"
+      ],
+      "metadata": {
+        "id": "9BbdDONNYasQ"
+      },
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -185,7 +203,7 @@
       "metadata": {
         "id": "To2Oc31M5C0r"
       },
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -199,7 +217,7 @@
       "metadata": {
         "id": "CHsIBuH4_ptr"
       },
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -215,7 +233,7 @@
       "metadata": {
         "id": "_IFP3_YwQ0fE"
       },
-      "execution_count": 9,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -232,23 +250,25 @@
       "metadata": {
         "id": "FUA1Ycg7Myu7"
       },
-      "execution_count": 10,
+      "execution_count": 11,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# Базовый кейс\n",
+        "# Тестовый кейс\n",
         "def test_case():\n",
         "  x = preprocess_input(img_file, (64, 64), 255.)\n",
         "  prediction = model.predict(np.expand_dims(x, [0, -1]))\n",
+        "  # label2coefficient() используется для декодирования каждого прогнозирования с горячим \n",
+        "  # кодированием на основе максимального значения, которое может быть присвоено каждому коэффициенту JPEG\n",
         "  predicted_label = label2coefficient(prediction.flatten(), max_coefficients=max_coeffs)\n",
         "  print(predicted_label)"
       ],
       "metadata": {
         "id": "sewPFpHk4GxE"
       },
-      "execution_count": 11,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -260,13 +280,13 @@
       "metadata": {
         "id": "dz6vRqhxb9IK"
       },
-      "execution_count": 12,
+      "execution_count": 13,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# Предсказание\n",
+        "# Прогнозирование\n",
         "def predict(img, k_dct, max_coeffs):\n",
         "  prediction = model.predict(np.expand_dims(img, [0, -1]), verbose=0)\n",
         "  predicted_label = label2coefficient(prediction.flatten(), max_coefficients=max_coeffs)\n",
@@ -279,7 +299,7 @@
       "metadata": {
         "id": "5QBeX_k4EYqP"
       },
-      "execution_count": 13,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -299,15 +319,39 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iEenNE6gNG_0",
-        "outputId": "44df61bc-de69-442a-f65c-60b1a92395a7"
+        "outputId": "957023a5-128d-447d-f155-b31f145fc8c4"
       },
-      "execution_count": 14,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
             "WARNING:tensorflow:No training configuration found in the save file, so the model was *not* compiled. Compile it manually.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test_case()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "r5GvT50bAn2x",
+        "outputId": "34531deb-0569-4110-e9b6-4c1b0159fcf2"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1/1 [==============================] - 1s 1s/step\n",
+            "[ 7  5  4  6  4  3  7  6  4  6  8  7  7  8 11]\n"
           ]
         }
       ]
@@ -325,32 +369,8 @@
       "metadata": {
         "id": "-B9MzAae8Xpc"
       },
-      "execution_count": 15,
+      "execution_count": 17,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "test_case()"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "r5GvT50bAn2x",
-        "outputId": "ab80a9b3-388e-495e-a4ea-1a7629cf8ae4"
-      },
-      "execution_count": 16,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "1/1 [==============================] - 1s 971ms/step\n",
-            "[ 7  5  4  6  4  3  7  6  4  6  8  7  7  8 11]\n"
-          ]
-        }
-      ]
     },
     {
       "cell_type": "code",
@@ -369,7 +389,7 @@
       "metadata": {
         "id": "MtvkS2fmGglU"
       },
-      "execution_count": 17,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -381,7 +401,7 @@
       "metadata": {
         "id": "zU0HLjTHa1og"
       },
-      "execution_count": 18,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -396,9 +416,9 @@
           "height": 237
         },
         "id": "1dITc-A_a6P5",
-        "outputId": "c8f4e490-6c39-473b-dd90-f9c2d1bb1ea2"
+        "outputId": "818b9183-f3b0-499d-a707-2215392a8523"
       },
-      "execution_count": 19,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -408,13 +428,13 @@
               "QF1                                                   \n",
               "60    62.500000  2.500000        62.583333    2.583333\n",
               "70    67.750000  3.083333        67.750000    3.083333\n",
-              "77    75.416667  1.916667        75.500000    2.000000\n",
-              "89    92.750000  3.750000        92.666667    3.666667\n",
+              "80    78.833333  1.833333        78.833333    1.833333\n",
+              "90    95.000000  5.000000        95.083333    5.083333\n",
               "98    95.583333  2.416667        95.666667    2.333333"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-0c75e387-1f7f-4b23-b8f9-f81a988481d8\">\n",
+              "  <div id=\"df-3e2046b9-7d11-45ff-b1c6-be36d68cd655\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -463,18 +483,18 @@
               "      <td>3.083333</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>77</th>\n",
-              "      <td>75.416667</td>\n",
-              "      <td>1.916667</td>\n",
-              "      <td>75.500000</td>\n",
-              "      <td>2.000000</td>\n",
+              "      <th>80</th>\n",
+              "      <td>78.833333</td>\n",
+              "      <td>1.833333</td>\n",
+              "      <td>78.833333</td>\n",
+              "      <td>1.833333</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>89</th>\n",
-              "      <td>92.750000</td>\n",
-              "      <td>3.750000</td>\n",
-              "      <td>92.666667</td>\n",
-              "      <td>3.666667</td>\n",
+              "      <th>90</th>\n",
+              "      <td>95.000000</td>\n",
+              "      <td>5.000000</td>\n",
+              "      <td>95.083333</td>\n",
+              "      <td>5.083333</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>98</th>\n",
@@ -486,7 +506,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0c75e387-1f7f-4b23-b8f9-f81a988481d8')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3e2046b9-7d11-45ff-b1c6-be36d68cd655')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -537,12 +557,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-0c75e387-1f7f-4b23-b8f9-f81a988481d8 button.colab-df-convert');\n",
+              "          document.querySelector('#df-3e2046b9-7d11-45ff-b1c6-be36d68cd655 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-0c75e387-1f7f-4b23-b8f9-f81a988481d8');\n",
+              "          const element = document.querySelector('#df-3e2046b9-7d11-45ff-b1c6-be36d68cd655');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -565,7 +585,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 20
         }
       ]
     }
